@@ -36,6 +36,7 @@ dohpaZ (11/?/03)
 + Added minimal support for importing maps (warning, this imports everything,
   so if not importing other SOE layers you will probably end up with duplicate
   lines, points, etc...).
++ Move eqstr_{}.txt handling to its own class.
 
 dohpaZ (10/24/03)
 ---------------------
